[package]
name = "menuvroom"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5.6", features = ["desktop"] }
dioxus-desktop = "0.5.6"
dioxus-html = "0.5.6"
nix = { version = "0.29.0", features = ["process"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
