[package]
name = "menuvroom"
version = "0.1.0"
edition = "2021"

[dependencies]
display-info = "0.5.1"
env_logger = "0.11.5"
glyphon = "0.6.0"
log = "0.4.22"
nix = { version = "0.29.0", features = ["process"] }
pollster = "0.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wgpu = "22.1.0"
winit = "0.30.5"
